package com.soat.fiap.food.core.shared.core.interfaceadapters.dto;

import lombok.Data;

/**
 * DTO utilizado para representar dados de um usuário do sistema.
 */
@Data
public class UserDTO {
	public String name;
	public String email;
}
